<resources>
    <string name="app_name">imdb</string>
    <string name="imdb">IMDb</string>
    <string name="you">You</string>
    <string name="sign_in_txt">Sign in</string>
    <string name="sign_up_txt">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">username</string>
    <string name="actors">Actors</string>
    <string name="personnel">personnel</string>
    <string name="suggested_by_imdb">Suggested by IMDb :</string>

</resources>